# Qt_ncnn_opencv

./: .gitignore  CMakeLists.txt  OIP-C.jfif  README.md  detect-image-demo.cpp  detect-video-demo.cpp  pfld-opt.param  pfld.cpp  test.cpp
BuildADdTest/: CMakeCache.txt  Makefile  cmake_install.cmake
QT_final/: dataanalysis.cpp  dataanalysis.h  dataanalysis.ui  detection.pro  detection.pro.user.20  detection.pro.user.4.8-pre1  detection.pro.user.4760e52.4.8-pre1  detection.pro.user.c33ae20.22  faceinput.cpp  faceinput.h  faceinput.ui  helpwidget.ui  history.cpp  history.h  history.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.ui  modifyuserinfo.ui  passwidget.cpp  passwidget.ui  sql.cpp  sql.h  warningwidget.cpp  warningwidget.h  warningwidget.ui  warningwidgetvt.cpp  warningwidgetvt.ui
build-detection-Desktop_Qt_5_9_9_GCC_64bit-Debug/: Makefile  moc_dataanalysis.cpp  moc_faceinput.cpp  moc_helpwidget.cpp  moc_history.cpp  moc_mainwindow.cpp  moc_modifyuserinfo.cpp  moc_pagemenu.cpp  moc_passwidget.cpp  moc_predefs.h  moc_warningwidgetvt.cpp  qrc_resource.cpp  ui_dataanalysis.h  ui_faceinput.h  ui_history.h  ui_mainpage.h  ui_mainwindow.h  ui_modifyuserinfo.h  ui_pagemenu.h  ui_passwidget.h  ui_warningwidget.h  ui_warningwidgetvt.h
build-detection-Desktop_Qt_5_9_9_GCC_64bit-Release/: .qmake.stash  Makefile  moc_dataanalysis.cpp  moc_helpwidget.cpp  moc_history.cpp  moc_mainpage.cpp  moc_mainwindow.cpp  moc_modifyuserinfo.cpp  moc_pagemenu.cpp  moc_passwidget.cpp  moc_predefs.h  moc_warningwidget.cpp  qrc_resource.cpp  ui_dataanalysis.h  ui_faceinput.h  ui_helpwidget.h  ui_history.h  ui_mainpage.h  ui_mainwindow.h  ui_passwidget.h  ui_warningwidget.h
detection/: detection.pro  detection.pro.user.c33ae20  faceinput.cpp  faceinput.h  faceinput.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.ui  mtcnn.cpp  resource.qrc
libfacedetection/: facedetection_export.h
model/: pfld-opt.param
qt_opencv_ncnn/: browsewidget.cpp  browsewidget.h  browsewidget.ui  double2string.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+3 more)
(+146 files in other folders)
